--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
+-revision prints.c and other print files
+-stop correctly the software (free everything when ^-c)
 -make structures/functions for dynamic structures
+-enable filtering of encapsuled protocol headers (like IP header in ICMP) 
 -options to display detailed layer protocol description
 -use sprintf instead of fprintf in prints.c
 -option to specify the number of packet to be read (and time of the capture)
