Software License changment, GNU/GPL version 3 instead of GNU/GPL version 2

--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
--fix bug when read from a file (the socket is open)
 -revision prints.c and other print files
--revision of the user option names
+-revision of the user's options names
 -make structures/functions for dynamic structures
 -enable filtering of encapsuled protocol headers (like IP header in ICMP) 
 -options to display detailed layer protocol description
@@ -10,7 +9,7 @@
 -give the choice of the interface
 -make a session layer filter
 -stack for the received packet, keep the times
--time received functions
+-time received options 
 -ntohs / ntohl
 -make the filter work for fragmented data (tcp,ip) 
 -make the code fit correctly on a 80x24 console
