Revision of the processing method for protocols

--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+-new protocols (to be done)
+-new options
+-new filters
+-interactive mode
 -revision prints.c and other print files
 -revision of the user's options names
 -make structures/functions for dynamic structures
