Update of the manual, now using categories (display, filter, misc)

--- a/groinc.1
+++ b/groinc.1
@@ -25,7 +25,53 @@ There is a regex filter for layers over the transport layer. You can
 save or load your captures in a file. You have the choice between a lot 
 of type of display (from simple to very detailed). A lot of protocols 
 are available.
-.SH OPTIONS
+.SH FILTER OPTIONS
+.TP
+.BI "-m	--sourcemac " "MAC address" \c
+\& The MAC adress of the source
+.TP
+.BI "-M	--destmac " "MAC address" \c
+\& The MAC adress of the destination
+.TP
+.BI "-s 	--sourceport " "port number" \c
+\& The source port number to be scan
+.TP
+.BI "-d 	--destport " "port number" \c
+\& The destination port number to be scan
+.TP
+.BI "-g	--globalport " "port" \c
+\& The source or destination port to be scan
+.TP
+.BI "-S 	--sourceip " "IP address" \c
+\& The source IP adress to be scan
+.TP
+.BI "-D 	--destip " "IP address" \c
+\& The destination IP adress to be scan
+.TP
+.BI "-G	--globalip " "IP address" \c
+\& The source or destination IP to be scan
+.TP
+.BI "-Q 	--protocol " "name"\c
+\& Specify the datalink layer protocol name
+.TP
+.BI "-p 	--ipprotocol " "name" \c
+\& Specify the transport layer (ip)protocol name
+.TP
+.BI "-P 	--ethprotocol " "name" \c
+\& Specify the network layer (ethernet)protocol name
+.TP
+.BI "-f 	--filter " "string" \c
+\& Enable (application layer) filter with a string
+.TP
+.BI "-F	--filter-regex " "regular expression" \c
+\& Enable (application layer) filter with a regular expression (POSIX)
+.TP
+.BI "-t 	--timelimit " "number"\c
+\& Give a limit of time to sniff (seconds)
+.TP
+.BI "-l	--limitnb " "number" \c
+\& Give the number of packets to display before stop the sniffing
+.SH DISPLAY OPTIONS
 .TP
 .B -a	--displaydata \c
 \& Display the received (application layer) data
@@ -42,38 +88,8 @@ are available.
 .B -c 	--displayprotodatalink \c
 \& Display the name/size of the datalink layer protocol
 .TP
-.BI "-d 	--destport " "port number" \c
-\& The destination port number to be scan
-.TP
-.BI "-D 	--destip " "IP address" \c
-\& The destination IP adress to be scan
-.TP
-.BI "-f 	--filter " "string" \c
-\& Enable (application layer) filter with a string
-.TP
-.BI "-F	--filter-regex " "regular expression" \c
-\& Enable (application layer) filter with a regular expression (POSIX)
-.TP
-.BI "-g	--globalport " "port" \c
-\& The source or destination port to be scan
-.TP
-.BI "-G	--globalip " "IP address" \c
-\& The source or destination IP to be scan
-.TP
-.B -h 	--help \c
-\& Display the help
-.TP
 .B -H	--hexa \c
 \& Display data in hexadecimal
-.TP
-.BI "-l	--limitnb " "number" \c
-\& Give the number of packets to display before stop the sniffing
-.TP
-.BI "-m	--sourcemac " "MAC address" \c
-\& The MAC adress of the source
-.TP
-.BI "-M	--destmac " "MAC address" \c
-\& The MAC adress of the destination
 .TP
 .B -n 	--displaypackets \c
 \& Display the length of the received packets
@@ -81,44 +97,30 @@ are available.
 .B -N 	--displayallpackets \c
 \& Display the length of all the not filtred received packets
 .TP
+.B -q 	--quiet \c
+\& Do not display packets
+.TP
+.B -v 	--verbose \c
+\& Verbose mode, display the headers of the scanned packets
+.TP
+.B -z	--dontdisplayemptysp \c
+\& Dont display the empty application layer packets
+.SH OTHER OPTIONS
+.TP
+.BI "-r	--read " "file" \c
+\& Load data from a saved file
+.TP
+.BI "-w	--write " "file" \c
+\& Save the data in an outputfile
+.TP
 .BI "-o 	--outputdata " "file" \c
 \& The output file name (for the data)
 .TP
 .BI "-O 	--output " "file"\c
 \& The output file name (for the headers)
 .TP
-.B -q 	--quiet \c
-\& Do not display packets
-.TP
-.BI "-Q 	--protocol " "name"\c
-\& Specify the datalink layer protocol name
-.TP
-.BI "-p 	--ipprotocol " "name" \c
-\& Specify the transport layer (ip)protocol name
-.TP
-.BI "-P 	--ethprotocol " "name" \c
-\& Specify the network layer (ethernet)protocol name
-.TP
-.BI "-r	--read " "file" \c
-\& Load data from a saved file
-.TP
-.BI "-s 	--sourceport " "port number" \c
-\& The source port number to be scan
-.TP
-.BI "-S 	--sourceip " "IP address" \c
-\& The source IP adress to be scan
-.TP
-.BI "-t 	--timelimit " "number"\c
-\& Give a limit of time to sniff (seconds)
-.TP
-.B -v 	--verbose \c
-\& Verbose mode, display the headers of the scanned packets
-.TP
-.BI "-w	--write " "file" \c
-\& Save the data in an outputfile
-.TP
-.B -z	--dontdisplayemptysp \c
-\& Dont display the empty application layer packets
+.B -h 	--help \c
+\& Display the help
 .TP
 .B --version \c
 \& Display the version of the software
@@ -127,16 +129,16 @@ are available.
 \& Display the copyright informations
 .SH EXAMPLES
 .TP 
-To sniff TCP trafic on port 80, display protocols headers: \c
+To sniff TCP trafic on port 80 and display protocols headers: \c
 .B groinc -v -p tcp -g 80
 .TP
-To sniff ARP trafic, stop after 20 packets received, use hexadecimal display: \c
+To sniff ARP trafic, stopping after 20 packets received, using hexadecimal display: \c
 .B groinc -a -H -P arp -l 20
 .TP
-To sniff UDP trafic which have destination IP 127.0.0.1 and destination port 53, save capture in file.cap: \c
+To sniff UDP trafic which have destination IP 127.0.0.1 and destination port 53, saving capture in  the file file.cap: \c
 .B groinc -q -w file.cap -p udp -D 127.0.0.1 -d 53
 .TP
-To sniff all the trafic during 20 seconds, display headers and data: \c
+To sniff all the trafic during 20 seconds and display headers and data: \c
 .B groinc -v -a -t 20
 .SH AUTHOR
 .RB "The " "groinc" " software and this manual page was written by Luc Sarzyniec <olbat@xiato.com>"
