Fix non-printable characters bug

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+-fix the filter regex bug
 -use the new system for the timelimit and packet number options
 -make the "time since first packet" report option work
 -new protocols (to be done)
