Add 'noresolv' option

--- a/groinc.1
+++ b/groinc.1
@@ -107,6 +107,9 @@ are available.
 \& Dont display the empty application layer packets
 .SH OTHER OPTIONS
 .TP
+.BI "-j --noresolv " \c
+\& Do not try to resolv address when using simple-display (makes the display run faster)
+.TP
 .BI "-r	--read " "file" \c
 \& Load data from a saved file
 .TP
