--- a/groinc.1
+++ b/groinc.1
@@ -107,7 +107,7 @@ are available.
 \& Dont display the empty application layer packets
 .SH OTHER OPTIONS
 .TP
-.BI "-j --noresolv " \c
+.B -j 	--noresolv \c
 \& Do not try to resolv address when using simple-display (makes the display run faster)
 .TP
 .BI "-r	--read " "file" \c
