--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+-modify crapy printing functions
+-add help and filter list to protofilters
+-use automake and autoconf
 -use little or bigendian types in protocols structs
 -use atexit or on_exit, abort function
 -use standard loop for string seeking in arrays
